Added a Profile controller and an UserProfile view, which displays information about the current user and allows them to change it.

--- a/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
@@ -18,7 +18,7 @@
     }
 
     <div class="menu-item">
-        <a href="#">My Profile</a>
+        <a asp-area="Main" asp-controller="Profile" asp-action="UserProfile" >My Profile</a>
     </div>
     <div class="menu-item">
         <a href="#">My Orders</a>
