Added more controllers in the admin area and added a view which displays all registered users.

--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             <span class="left-nav-text pointer-cursor">Products</span>
         </div>
         <div class="item">
-            <span class="left-nav-text pointer-cursor">Users</span>
+            <a asp-area="Admin" asp-action="Registered" asp-controller="Users" class="left-nav-text pointer-cursor">Users</a>
         </div>
         <div class="item">
             <span class="left-nav-text pointer-cursor">Orders</span>
