--- a/TwinsArtstyle/wwwroot/css/admin.css
+++ b/TwinsArtstyle/wwwroot/css/admin.css
@@ -3,3 +3,43 @@
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.content-wrapper{
+    display: inline-block;
+    position:relative;
+    margin-left: 20%;
+}
+
+#registered-users{
+    position: relative;
+    top: 50px;
+    width: 800px;
+}
+
+.panel > h3{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 5px;
+    font-size: 30px;
+}
+
+.panel{
+    padding: 10px;
+    background-color: #eee;
+    border-radius: 15px;
+    border: 1px solid #d6d6d6;
+}
+
+#users{
+    display: table;
+    border-collapse: collapse;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 0 auto;
+    width: 100%;
+}
+
+th, td{
+    border: 1px solid #868686;
+    padding: 5px;
+}
