--- a/TwinsArtstyle/wwwroot/css/admin_Layout.css
+++ b/TwinsArtstyle/wwwroot/css/admin_Layout.css
@@ -68,11 +68,11 @@ h1{
 }
 
 .left-menu-bar{
-    display: flex;
+    display: inline-flex;
+    position: absolute;
     align-items: center;
     flex-direction: column;
     width: 250px;
-    max-width: 250px;
     height: calc(100% - 80px);
     background-color: #333;
     gap: 7px;
