Added functionality to view all available roles and to add new ones.

--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
             <span class="left-nav-text pointer-cursor">Inbox</span>
         </div>
         <div class="item">
-            <span class="left-nav-text pointer-cursor">Manage Roles</span>
+            <a asp-area="Admin" asp-controller="Roles" asp-action="Manage" class="left-nav-text pointer-cursor">Manage Roles</a>
         </div>
         <div class="item">
             <span class="left-nav-text pointer-cursor">Manage Claims</span>
