--- a/TwinsArtstyle/Areas/Admin/Views/Users/Registered.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Users/Registered.cshtml
@@ -6,25 +6,25 @@
 <div id="registered-users">
     <div class="panel">
         <h3>Latest Registrations</h3>
-        <table id="users">
+        <table class="display-table" id="users">
             <thead>
                 <tr class="row">
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th>Actions</th>
+                    <th class="display-head">First Name</th>
+                    <th class="display-head">Last Name</th>
+                    <th class="display-head">Email</th>
+                    <th class="display-head">Phone Number</th>
+                    <th class="display-head">Actions</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var user in Model)
                 {
                     <tr class="row">
-                        <td>@user.FirstName</td>
-                        <td>@user.LastName</td>
-                        <td>@user.Email</td>
-                        <td>@user.PhoneNumber</td>
-                        <td id="actions">
+                        <td class="display-data" >@user.FirstName</td>
+                        <td class="display-data" >@user.LastName</td>
+                        <td class="display-data" >@user.Email</td>
+                        <td class="display-data" >@user.PhoneNumber</td>
+                        <td class="display-data" id="actions">
                             <a asp-area="Admin" asp-controller="Users" asp-action="Edit" asp-route-email="@user.Email">
                                 <i class="bi bi-pencil-fill action-icon"></i>
                             </a>
