Added functionality to add a new product and to view all available products.

--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
             <span class="left-nav-text pointer-cursor">Info</span>
         </div>
         <div class="item">
-            <span class="left-nav-text pointer-cursor">Products</span>
+            <a asp-area="Admin" asp-controller="Products" asp-action="Manage" class="left-nav-text pointer-cursor">Products</a>
         </div>
         <div class="item">
             <a asp-area="Admin" asp-action="Registered" asp-controller="Users" class="left-nav-text pointer-cursor">Users</a>
