--- a/TwinsArtstyle/wwwroot/css/admin.css
+++ b/TwinsArtstyle/wwwroot/css/admin.css
@@ -69,6 +69,7 @@ a {
     top: 50px;
     padding: 15px;
     margin: 0 auto;
+    height: calc(100% - 80px);
 }
 
 .form-floating{
@@ -114,9 +115,42 @@ a {
     position: relative;
     width: 200px;
     text-align: center;
-    
 }
 
-#add-roles{
-    
+#add-product{
+    margin: 10px 20px;
+    height: 100% - 80px;
+}
+
+#products > .panel{
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    gap: 30px;
+    align-items: center;
+}
+
+#products{
+    height: fit-content;
+}
+
+.product-card{
+    max-width: 200px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #868686;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    word-wrap: break-word;
+}
+
+.product-image-container > img{
+    height: 150px;
+    width: auto;
+}
+
+.product-name{
+    flex-grow: 0;
 }
