Added many products, and Products controller and ByCategory View to the main page. Needs cachinggit status!

--- a/TwinsArtstyle/Areas/Admin/Views/Products/Manage.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Products/Manage.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-floating">
                 <label class="form-label" asp-for="FirstOrDefault().Price"></label>
-                <input class="form-control" asp-for="FirstOrDefault().Price" type="number" />
+                <input class="form-control" asp-for="FirstOrDefault().Price" type="text" />
                 <span asp-validation-for="FirstOrDefault().Price"></span>
             </div>
             <div asp-validation-summary="ModelOnly"></div>
