--- a/TwinsArtstyle/Areas/Admin/Views/Products/_ProductPartial.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Products/_ProductPartial.cshtml
@@ -8,9 +8,9 @@
         <span class="form-label">@Model.Name</span>
     </div>
     <div class="product-name">
-        <span class="form-label">@Model.Category</span>
+        <span class="form-label">Категория: @Model.Category</span>
     </div>
     <div class="order-container">
-        <span class="price form-label">@Model.Price</span>
+        <span class="price form-label">@Model.Price лв.</span>
     </div>
 </div>
