--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -42,15 +42,15 @@
             </li>
             <li class="category-item">
                 <i class="bi bi-printer-fill"></i>
-                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Принтове</a>
+                <a asp-area="Main" asp-controller="Products" asp-action="ByCategory" asp-route-category="Принтове" class="category animate-background-color">Принтове</a>
             </li>
             <li class="category-item">
                 <i class="bi bi-calendar"></i>
-                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Платна</a>
+                <a asp-area="Main" asp-controller="Products" asp-action="ByCategory" asp-route-category="Платна" class="category animate-background-color">Платна</a>
             </li>
             <li class="category-item">
                 <i class="bi bi-brush-fill"></i>
-                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Рисунки</a>
+                <a asp-area="Main" asp-controller="Products" asp-action="ByCategory" asp-route-category="Рисунки" class="category animate-background-color">Рисунки</a>
             </li>
         </ul>
     </div>
