Added Cart controller and a funtionality to add products to a cart.

--- a/TwinsArtstyle/Areas/Main/Views/Products/ByCategory.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Products/ByCategory.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div id="products">
-    <h3>@Model.FirstOrDefault().Category</h3>
+    <h3>@ViewData["Category"]</h3>
     <div class="panel">
 
         @foreach (var item in Model)
