Added a Cart partial view, the functionality to add items to the cart with javascript, which then adds them to the database, but doesnt refresh the page, thus making it faster. Also added composite keys to the joining tables, because i forgot to do it earlier...

--- a/TwinsArtstyle/Areas/Main/Views/Products/_ProductPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Products/_ProductPartial.cshtml
@@ -6,7 +6,7 @@
     <div class="add-product">
         <span class="price">@Model.Price лв.</span>
         <span>Count: </span>
-        <input value="1" type="number" id="product-count"/>
+        <input value="1" type="number" class="product-count"/>
         <button class="add-to-cart-button">Add To Cart</button>
     </div>
 </div>
