--- a/TwinsArtstyle/Areas/Main/Views/Shared/_CartPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_CartPartial.cshtml
@@ -1,13 +1,9 @@
-﻿@using TwinsArtstyle.Services.Interfaces
-@inject ICartService _cartService
-@{
-    var userCartItems = await _cartService.GetProductsForUser(User);
-}
+﻿@model IEnumerable<CartProductViewModel>
 
 <div class="cart-items">
     <ul class="items">
 
-        @foreach(var item in userCartItems)
+        @foreach (var item in Model)
         {
             <li class="cart-item">
                 <img src="@item.Product.ImageUrl" class="item-image">
@@ -18,8 +14,13 @@
 
     </ul>
     <br />
-    <hr />
-    <div class="order-button-container">
-        <button type="submit" class="order-button">Place order</button>
-    </div>
+
+    @if (Model.Count() > 0)
+    {
+        <hr />
+        <div class="order-button-container">
+            <button type="submit" class="order-button">Place order</button>
+        </div>
+    }
+
 </div>
