--- a/TwinsArtstyle/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using TwinsArtstyle.Services.ViewModels
 @using TwinsArtstyle.Infrastructure.Models
+@using TwinsArtstyle.Services.ViewModels.ProductModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
