--- a/TwinsArtstyle/Areas/Main/Views/_ViewImports.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TwinsArtstyle
 @using TwinsArtstyle.Services.ViewModels
+@using TwinsArtstyle.Services.ViewModels.ProductModels
 @using TwinsArtstyle.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
