Added addresses view and functionality for an authenticated user to add an address.

--- a/TwinsArtstyle/Areas/Main/Views/Profile/UserProfile.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Profile/UserProfile.cshtml
@@ -6,7 +6,7 @@
 
 <form asp-area="Main" asp-controller="Profile" asp-action="UserProfile">
     <div id="profile-card">
-        <h2>Profile</h2>
+        <h2 class="form-heading">Profile</h2>
         <hr />
         <div class="form-floating">
             <label class="form-label" asp-for="FirstName"></label>
