--- a/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
@@ -24,7 +24,7 @@
         <a href="#">My Orders</a>
     </div>
     <div class="menu-item">
-        <a href="#">My Addresses</a>
+        <a asp-area="Main" asp-controller="Addresses" asp-action="All">My Addresses</a>
     </div>
     <div class="menu-item">
         <a asp-action="Logout" asp-controller="User">Logout</a>
