--- a/TwinsArtstyle/Areas/Main/Views/User/Login.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/User/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="login-card account-card">
-    <h2>@ViewData["Title"]</h2>
+    <h2 class="form-heading">@ViewData["Title"]</h2>
     <form asp-controller="User" asp-action="Login" method="post">
         <div class="form-floating">
             <label asp-for="Email" class="form-label"></label>
