--- a/TwinsArtstyle/Areas/Main/Views/User/Register.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/User/Register.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="register-card account-card">
-    <h2>@ViewData["Title"]</h2>
+    <h2 class="form-heading">@ViewData["Title"]</h2>
     <form id="registerForm" asp-route-returnUrl="" method="post">
             <h2>Create a new account.</h2>
             <hr />
