--- a/TwinsArtstyle/wwwroot/css/site.css
+++ b/TwinsArtstyle/wwwroot/css/site.css
@@ -92,10 +92,12 @@ li.about-text{
     gap: 3px;
 }
 
-.account-card > h2, #profile-card > h2{
+.form-heading{
     text-align: center;
     font-size: 35px;
+    font-family: "Comic Sans MS";
 }
+
 
 .form-floating{
     display: flex;
@@ -118,6 +120,7 @@ li.about-text{
 
 .submit-button-container{
     margin-top: 15px;
+    text-align: center;
 }
 
 .submit{
@@ -252,4 +255,46 @@ li.about-text{
     color: white;
     background-color: var(--light-blue);
     font-size: 50px;
+}
+
+.address-card{
+    background-color: #eee;
+    border-radius: 15px;
+    padding: 20px;
+    height: 470px;
+    max-height: 470px;
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    width: 300px;
+    margin: 0 auto;
+    overflow-y: scroll;
+    margin-top: 10px;
+    font-family: "Comic Sans MS";
+}
+
+.address-card::-webkit-scrollbar{
+   width: 10px;
+    background-color: var(--light-blue);
+    border-radius: 15px;
+}
+
+.address-card::-webkit-scrollbar-track{
+    width: 12px;
+}
+
+.address-card::-webkit-scrollbar-thumb{
+    border-radius: 15px;
+    background-color: #333;
+}
+
+.submit-button-container > a{
+    text-decoration: none;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 30px;
+    color: white;
+    background-color: var(--blue);
+    padding: 5px;
+    border-radius: 15px;
 }
