--- a/TwinsArtstyle/Areas/Main/Views/Products/_ProductPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Products/_ProductPartial.cshtml
@@ -1,12 +1,14 @@
 ﻿@model ProductViewModel
 
 <div class="product-card" id="@Model.Id">
-    <img class="product-image" src="@Model.ImageUrl" />
+    <a asp-area="Main" asp-controller="Products" asp-action="Details" asp-route-productId="@Model.Id">
+        <img class="product-image" src="@Model.ImageUrl" />
+    </a>
     <span class="product-name">@Model.Name</span>
     <div class="add-product">
         <span class="price">@Model.Price лв.</span>
         <span>Count: </span>
-        <input value="1" type="number" class="product-count"/>
+        <input value="1" type="number" class="product-count" />
         <button class="add-to-cart-button">Add To Cart</button>
     </div>
 </div>
