--- a/TwinsArtstyle/Areas/Main/Views/Shared/_CartPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_CartPartial.cshtml
@@ -16,10 +16,17 @@
     </ul>
     <br />
 
-    @if (Model.Count() > 0)
+    @if (Model.Count() == 0)
     {
         <hr />
-        <div class="order-button-container">
+        <div style="display: none" class="order-button-container">
+            <button type="submit" class="order-button">Place order</button>
+        </div>
+    }
+    else
+    {
+        <hr />
+        <div  class="order-button-container">
             <button type="submit" class="order-button">Place order</button>
         </div>
     }
