--- a/TwinsArtstyle/Areas/Main/Views/_ViewImports.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using TwinsArtstyle.Services.ViewModels
 @using TwinsArtstyle.Services.ViewModels.ProductModels
 @using TwinsArtstyle.Models
+@using TwinsArtstyle.Services.ViewModels.OrderModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
