--- a/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
@@ -21,7 +21,7 @@
         <a asp-area="Main" asp-controller="Profile" asp-action="UserProfile" >My Profile</a>
     </div>
     <div class="menu-item">
-        <a href="#">My Orders</a>
+        <a asp-area="Main" asp-controller="Orders" asp-action="All">My Orders</a>
     </div>
     <div class="menu-item">
         <a asp-area="Main" asp-controller="Addresses" asp-action="All">My Addresses</a>
