Added functionality to add an user to the Administrator role.

--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
             <span class="left-nav-text pointer-cursor">Manage Claims</span>
         </div>
         <div class="item">
-            <span class="left-nav-text pointer-cursor">Administrators</span>
+            <a asp-area="Admin" asp-controller="Administrators" asp-action="Add" class="left-nav-text pointer-cursor">Administrators</a>
         </div>
     </div>
 
