--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -1,8 +1,14 @@
+@using System.Security.Claims
 @using TwinsArtstyle.Services.Interfaces
 @inject ICartService _cartService
 
 @{
-    var userCartItems = await _cartService.GetProductsForUser(User);
+    var userCartItems = Enumerable.Empty<CartProductViewModel>();
+
+    if(User.Identity.IsAuthenticated)
+    {
+        userCartItems = await _cartService.GetProductsForUser(User.FindFirst(ClaimTypes.NameIdentifier)?.Value);
+    }
 }
 
 <!DOCTYPE html>
