--- a/TwinsArtstyle/wwwroot/css/admin_Layout.css
+++ b/TwinsArtstyle/wwwroot/css/admin_Layout.css
@@ -1,3 +1,16 @@
+
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    background: #333;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 20px;
+    background-color: white;
+}
 * {
     margin: 0;
     padding: 0;
@@ -90,4 +103,9 @@ h1{
     color: white;
     font-weight:100;
     font-size: 25px;
+}
+
+#add-admin-button{
+    background-color: #eee;
+    color: #333;
 }
