--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
             <a asp-area="Admin" asp-action="Registered" asp-controller="Users" class="left-nav-text pointer-cursor">Users</a>
         </div>
         <div class="item">
-            <span class="left-nav-text pointer-cursor">Orders</span>
+            <a asp-area="Admin" asp-controller="Orders" asp-action="All" class="left-nav-text pointer-cursor">Orders</a>
         </div>
         <div class="item">
             <span class="left-nav-text pointer-cursor">Inbox</span>
