--- a/TwinsArtstyle/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using TwinsArtstyle.Services.ViewModels
 @using TwinsArtstyle.Infrastructure.Models
 @using TwinsArtstyle.Services.ViewModels.ProductModels
+@using TwinsArtstyle.Services.ViewModels.OrderModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
