--- a/TwinsArtstyle/Areas/Main/Views/Addresses/Add.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Addresses/Add.cshtml
@@ -21,6 +21,6 @@
         <div class="submit-button-container">
             <button class="submit">Add</button>
         </div>
-            
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
     </div>
 </form>
