--- a/TwinsArtstyle/wwwroot/css/Layout.css
+++ b/TwinsArtstyle/wwwroot/css/Layout.css
@@ -1,6 +1,18 @@
 @import "colors.css";
 
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    background: var(--blue);
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 20px;
+    background-color: var(--dark-blue-green);
+}
 
 
 * {
