Changed the All.cshtml view.

--- a/TwinsArtstyle/Areas/Admin/Views/Orders/All.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Orders/All.cshtml
@@ -7,29 +7,22 @@
         <div class="order">
             <span class="order-id">Order Id: @order.OrderId.ToString()</span>
             <div class="user-information">
-                <span class="first-name">First name: @order.User.FirstName</span>
-                <span class="last-name">Last name: @order.User.LastName</span>
-                <span class="email">Email: @order.User.Email</span>
-                <span class="phone-number">Phone number: @order.User.PhoneNumber</span>
+                <span class="full-name">@order.User.FirstName @order.User.LastName</span>
+                <span class="email">@order.User.Email</span>
+                <span class="phone-number">@order.User.PhoneNumber</span>
             </div>
-            <div class="purchased-products-names">
-                <ul class="products-list">
-
-                    @foreach (var product in order.Products)
-                    {
-                        <li class="product">
-                            @product.Product.Name, Count: @product.Count
-                        </li>
-                    }
-
-                </ul>
+            <div class="address-container">
+                <span class="address">Адрес: @order.AddressText</span>
             </div>
-            <div class="address">
-                <span class="address-text">Address: @order.AddressText</span>
+            <div class="price-container">
+                <span class="price">Цена: @order.TotalPrice лв.</span>
             </div>
-            <span class="order-total-price">Price: @order.TotalPrice лв.</span>
-            <span class="status">Order status: @order.Status.ToString()</span>
-            <span class="creation-date">Creation date: @order.CreationDate.ToString("dd/MM/yyyy HH:mm")</span>
+            <div class="creation-date">
+                <span class="date">Creation date: @order.CreationDate.ToString("dd/MM/yyyy HH:mm")</span>
+            </div>
+            <div class="details-button-container">
+                <a asp-area="Admin" asp-controller="Orders" asp-action="Details" asp-route-orderId="@order.OrderId">Details</a>
+            </div>
         </div>
     }
 
