--- a/TwinsArtstyle/wwwroot/css/admin.css
+++ b/TwinsArtstyle/wwwroot/css/admin.css
@@ -206,38 +206,50 @@ a {
 }
 
 .order{
-    display: flex;
+    box-sizing: border-box;
     justify-content: space-between;
-    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
     padding: 20px;
     border: 1px solid #333;
     border-radius: 20px;
     box-shadow: 2px 2px 5px #333;
-    max-height: 150px;
     height: 150px;
-    overflow-y: scroll;
-    align-items: flex-start;
-    gap: 1px;
+    max-height: 150px;
+    width: 100%;
+    gap: 15px;
 }
 
 .user-information{
     display: flex;
     flex-direction: column;
+    max-height: 300px;
     overflow-y: scroll;
-    padding: 3px;
-    max-height: 60px;
+    border: 2px solid #333;
+    padding: 7px;
 }
 
-.products-list{
+.address-container{
+    max-width: 200px;
     overflow-y: scroll;
-
+    border: 2px solid #333;
 }
 
-.address{
-    border: 1px solid #333;
-    border-radius: 20px;
-    height: 50px;
-    max-height: 50px;
-    padding: 10px;
-    overflow-y: scroll
+.details-button-container{
+    background-color: #333;
+    padding: 5px 30px;
+    border-radius: 15px;
+}
+
+.details-button-container > a{
+    text-decoration: none;
+    color: white;
+}
+
+.creation-date{
+    width: 180px;
+}
+.order-id{
+    width: 100%;
+    max-width: 220px;
 }
