--- a/TwinsArtstyle/wwwroot/css/admin.css
+++ b/TwinsArtstyle/wwwroot/css/admin.css
@@ -224,9 +224,12 @@ a {
     display: flex;
     flex-direction: column;
     max-height: 300px;
+    max-width: 300px;
+    width: 300px;
     overflow-y: scroll;
     border: 2px solid #333;
     padding: 7px;
+    
 }
 
 .address-container{
@@ -249,7 +252,61 @@ a {
 .creation-date{
     width: 180px;
 }
+
 .order-id{
     width: 100%;
     max-width: 220px;
+}
+
+.order-details{
+    background-color: #eee;
+    border: 2px solid #333;
+    height: 600px;
+    max-height: 600px;
+    width: 1000px;
+    max-width: 1000px;
+    margin: 30px auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    border-radius: 5px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+}
+
+.products-table{
+    display: table;
+    width: 100%;
+    text-align: center;
+   
+    border-collapse: collapse;
+}
+
+.product-image{
+    width: 50px;
+    height: auto;
+}
+
+tr{
+    border-bottom: 1px solid #333;
+}
+
+td{
+    padding: 5px;
+}
+
+.shipping-information{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    border: 1px solid #333;
+    width: fit-content;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.total-price{
+    margin-top: 50px;
+    font-size: 2em;
 }
